Replaced Paths.get with Path.of